# gpu_group0

./: .gitignore  CMakeLists.txt  Makefile  _CMakeLists.txt  a.out  build_and_run.sh  camera.h  compile_and_run.sh  cudart  hitable.h  hitable_list.h  main  main.cc  main.cu  material.h  measure.sh  output.exp  output.lib  random_utils.cpp  random_utils.h  rt  run.sh  runner.sh  sphere.h  vec3.h
OptiX/SDK/: CMakeLists.txt
OptiX/SDK/raytracer/: CMakeLists.txt  raytracer copy.cpp  raytracer.cpp  raytracer.cu
optix_owl_version/: CMakeLists.txt  build_and_run.sh  hostCode.cpp  just_run.sh
optix_owl_version/raytracer/: deviceCode.cu  deviceCode.h  hostCode.cpp
